moved initial positioning from css to js and add animating function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             class="native-radio-button native-radio-button--adnroid"
             checked
           />
-          <span class="radio-fake radio-fake--checked"></span>
+          <span class="radio-span radio-span--checked"></span>
 
           <input
             id="ios"
@@ -25,7 +25,7 @@
             name="os"
             class="native-radio-button native-radio-button--ios"
           />
-          <span class="radio-fake radio-fake--unchecked"></span>
+          <span class="radio-span radio-span--unchecked"></span>
           <span class="background-animate background-animate--checked"></span>
           <span class="background-animate background-animate--unchecked"></span>
           <span
