--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
         </div>
       </div>
     </section>
-    <script src="app.ts"></script>
+    <script src="app.js"></script>
   </body>
 </html>
